test_yuriiq/catalog/language/russian/payment/pp_express.php
<?php

// text
$_['text_title']	= 'PayPal Express (включая Кредитные и Дебетовые карты)';

// error

// button

// express
?>